# arxify

./: .gitignore  README.md  pyproject.toml  setup.py
arxify/: __init__.py  arxify.py
